Bug 54310 - Fix X11 backend
Summary: Fix X11 backend
Status: RESOLVED FIXED
Alias: None
Product: Spice
Classification: Unclassified
Component: spice-gtk (show other bugs)
Version: unspecified
Hardware: All All
: medium normal
Assignee: Spice Bug List
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-31 09:04 UTC by Marc-Andre Lureau
Modified: 2012-08-31 16:46 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Fix X11 backend (3.07 KB, patch)
2012-08-31 09:05 UTC, Marc-Andre Lureau
Details | Splinter Review

Description Marc-Andre Lureau 2012-08-31 09:04:43 UTC
The X11 backend allocates the "image" with X11 and needs the widget to
be realized before calling spicex_image_create().
Comment 1 Marc-Andre Lureau 2012-08-31 09:05:16 UTC
Created attachment 66392 [details] [review]
Fix X11 backend
Comment 2 Marc-Andre Lureau 2012-08-31 16:46:28 UTC
pushed


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.