Fix X11 backend

The X11 backend allocates the "image" with X11 and needs the widget to
be realized before calling spicex_image_create().

https://bugs.freedesktop.org/show_bug.cgi?id=54310